Using matrix to enhance image tagging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ on:
 env:
   AWS_REGION: eu-west-3  # Set your AWS region
   ECR_REPOSITORY: svnback  # Set your ECR repository name
-  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build:
@@ -19,6 +18,10 @@ jobs:
       contents: read
       packages: write
       id-token: write
+
+    strategy:
+      matrix:
+        tag: ["${{ github.sha }}", "latest"]
 
     steps:
       - name: Checkout code
@@ -44,7 +47,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          tags: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ matrix.tag }}
 
       - name: Logout from Amazon ECR
         run: docker logout ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
