--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,11 +31,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Test just output the message
+        uses: profy12/lowercase-action@0.6
+        id: lowercase_name
+        with:
+          text: |
+            ${{ github.actor }}
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: kuent1/svnfront
+          images: ${{ steps.lowercase_name.outputs.text }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
         id: push
